--- a/src/output.css
+++ b/src/output.css
@@ -214,9 +214,6 @@
   .bottom-8 {
     bottom: calc(var(--spacing) * 8);
   }
-  .left-8 {
-    left: calc(var(--spacing) * 8);
-  }
   .z-10 {
     z-index: 10;
   }
@@ -241,17 +238,11 @@
   .grid {
     display: grid;
   }
-  .hidden {
-    display: none;
-  }
   .table {
     display: table;
   }
   .aspect-\[2\/3\] {
     aspect-ratio: 2/3;
-  }
-  .aspect-\[3\/4\] {
-    aspect-ratio: 3/4;
   }
   .h-5 {
     height: calc(var(--spacing) * 5);
@@ -259,26 +250,11 @@
   .h-16 {
     height: calc(var(--spacing) * 16);
   }
-  .h-80 {
-    height: calc(var(--spacing) * 80);
-  }
-  .h-\[600px\] {
-    height: 600px;
-  }
-  .h-\[calc\(80vh\)\] {
-    height: calc(80vh);
-  }
-  .h-\[calc\(100vh-5rem\)\] {
-    height: calc(100vh - 5rem);
-  }
   .h-full {
     height: 100%;
   }
   .h-screen {
     height: 100vh;
-  }
-  .min-h-\[600px\] {
-    min-height: 600px;
   }
   .min-h-\[calc\(80vh\)\] {
     min-height: calc(80vh);
@@ -297,18 +273,6 @@
   }
   .w-full {
     width: 100%;
-  }
-  .w-screen {
-    width: 100vw;
-  }
-  .max-w-3xl {
-    max-width: var(--container-3xl);
-  }
-  .max-w-7xl {
-    max-width: var(--container-7xl);
-  }
-  .max-w-xl {
-    max-width: var(--container-xl);
   }
   .max-w-xs {
     max-width: var(--container-xs);
@@ -331,9 +295,6 @@
   .items-center {
     align-items: center;
   }
-  .items-start {
-    align-items: flex-start;
-  }
   .justify-between {
     justify-content: space-between;
   }
@@ -348,9 +309,6 @@
   }
   .gap-8 {
     gap: calc(var(--spacing) * 8);
-  }
-  .gap-12 {
-    gap: calc(var(--spacing) * 12);
   }
   .gap-16 {
     gap: calc(var(--spacing) * 16);
@@ -399,9 +357,6 @@
   .bg-white {
     background-color: var(--color-white);
   }
-  .bg-\[url\(\'\.\/assets\/collection-bg\.jpg\'\)\] {
-    background-image: url('./assets/collection-bg.jpg');
-  }
   .bg-\[url\(\'\.\/assets\/collection-bg\.webp\'\)\] {
     background-image: url('./assets/collection-bg.webp');
   }
@@ -426,9 +381,6 @@
   .bg-no-repeat {
     background-repeat: no-repeat;
   }
-  .object-contain {
-    object-fit: contain;
-  }
   .p-6 {
     padding: calc(var(--spacing) * 6);
   }
@@ -441,14 +393,11 @@
   .px-8 {
     padding-inline: calc(var(--spacing) * 8);
   }
+  .px-12 {
+    padding-inline: calc(var(--spacing) * 12);
+  }
   .px-\[10\%\] {
     padding-inline: 10%;
-  }
-  .px-\[15\%\] {
-    padding-inline: 15%;
-  }
-  .px-\[20\%\] {
-    padding-inline: 20%;
   }
   .py-1 {
     padding-block: calc(var(--spacing) * 1);
@@ -456,11 +405,11 @@
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
   }
-  .py-4 {
-    padding-block: calc(var(--spacing) * 4);
-  }
   .py-5 {
     padding-block: calc(var(--spacing) * 5);
+  }
+  .py-12 {
+    padding-block: calc(var(--spacing) * 12);
   }
   .py-20 {
     padding-block: calc(var(--spacing) * 20);
@@ -470,9 +419,6 @@
   }
   .font-bodoni {
     font-family: var(--font-bodoni);
-  }
-  .font-cormorant {
-    font-family: var(--font-cormorant);
   }
   .font-eb-garamond {
     font-family: var(--font-eb-garamond);
@@ -520,10 +466,6 @@
     --tw-leading: var(--leading-tight);
     line-height: var(--leading-tight);
   }
-  .font-bold {
-    --tw-font-weight: var(--font-weight-bold);
-    font-weight: var(--font-weight-bold);
-  }
   .font-light {
     --tw-font-weight: var(--font-weight-light);
     font-weight: var(--font-weight-light);
@@ -536,21 +478,9 @@
     --tw-font-weight: var(--font-weight-normal);
     font-weight: var(--font-weight-normal);
   }
-  .font-semibold {
-    --tw-font-weight: var(--font-weight-semibold);
-    font-weight: var(--font-weight-semibold);
-  }
-  .tracking-normal {
-    --tw-tracking: var(--tracking-normal);
-    letter-spacing: var(--tracking-normal);
-  }
   .tracking-tight {
     --tw-tracking: var(--tracking-tight);
     letter-spacing: var(--tracking-tight);
-  }
-  .tracking-tighter {
-    --tw-tracking: var(--tracking-tighter);
-    letter-spacing: var(--tracking-tighter);
   }
   .tracking-widest {
     --tw-tracking: var(--tracking-widest);
@@ -558,9 +488,6 @@
   }
   .text-\[\#a24e4e\] {
     color: #a24e4e;
-  }
-  .text-black {
-    color: var(--color-black);
   }
   .text-white {
     color: var(--color-white);
@@ -614,6 +541,24 @@
       }
     }
   }
+  .active\:scale-95 {
+    &:active {
+      --tw-scale-x: 95%;
+      --tw-scale-y: 95%;
+      --tw-scale-z: 95%;
+      scale: var(--tw-scale-x) var(--tw-scale-y);
+    }
+  }
+  .active\:bg-white {
+    &:active {
+      background-color: var(--color-white);
+    }
+  }
+  .active\:text-black {
+    &:active {
+      color: var(--color-black);
+    }
+  }
   .md\:w-1\/2 {
     @media (width >= 48rem) {
       width: calc(1/2 * 100%);
@@ -634,9 +579,14 @@
       padding: calc(var(--spacing) * 24);
     }
   }
-  .md\:text-left {
+  .md\:px-24 {
     @media (width >= 48rem) {
-      text-align: left;
+      padding-inline: calc(var(--spacing) * 24);
+    }
+  }
+  .md\:py-24 {
+    @media (width >= 48rem) {
+      padding-block: calc(var(--spacing) * 24);
     }
   }
   .md\:text-2xl {
@@ -649,12 +599,6 @@
     @media (width >= 48rem) {
       font-size: var(--text-3xl);
       line-height: var(--tw-leading, var(--text-3xl--line-height));
-    }
-  }
-  .md\:text-4xl {
-    @media (width >= 48rem) {
-      font-size: var(--text-4xl);
-      line-height: var(--tw-leading, var(--text-4xl--line-height));
     }
   }
   .md\:text-6xl {
