--- a/src/output.css
+++ b/src/output.css
@@ -13,6 +13,7 @@
     --container-xs: 20rem;
     --container-xl: 36rem;
     --container-3xl: 48rem;
+    --container-5xl: 64rem;
     --container-7xl: 80rem;
     --text-xs: 0.75rem;
     --text-xs--line-height: calc(1 / 0.75);
@@ -47,6 +48,7 @@
     --tracking-widest: 0.1em;
     --leading-tight: 1.25;
     --leading-relaxed: 1.625;
+    --aspect-video: 16 / 9;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
@@ -254,8 +256,14 @@
   .aspect-\[2\/3\] {
     aspect-ratio: 2/3;
   }
+  .aspect-\[21\/9\] {
+    aspect-ratio: 21/9;
+  }
   .aspect-square {
     aspect-ratio: 1 / 1;
+  }
+  .aspect-video {
+    aspect-ratio: var(--aspect-video);
   }
   .h-5 {
     height: calc(var(--spacing) * 5);
@@ -281,11 +289,20 @@
   .w-16 {
     width: calc(var(--spacing) * 16);
   }
+  .w-\[80\%\] {
+    width: 80%;
+  }
   .w-\[95\%\] {
     width: 95%;
   }
+  .w-\[calc\(80\%\)\] {
+    width: calc(80%);
+  }
   .w-full {
     width: 100%;
+  }
+  .max-w-5xl {
+    max-width: var(--container-5xl);
   }
   .max-w-xs {
     max-width: var(--container-xs);
@@ -340,6 +357,9 @@
   .border-white {
     border-color: var(--color-white);
   }
+  .bg-\[\#a24e4e\] {
+    background-color: #a24e4e;
+  }
   .bg-\[\#e2d5d5\] {
     background-color: #e2d5d5;
   }
@@ -384,6 +404,9 @@
   }
   .bg-\[url\(\'\.\/assets\/collection-bg\.webp\'\)\] {
     background-image: url('./assets/collection-bg.webp');
+  }
+  .bg-\[url\(\'\.\/assets\/footer\.webp\'\)\] {
+    background-image: url('./assets/footer.webp');
   }
   .bg-\[url\(\'\.\/assets\/hero-bg\.jpg\'\)\] {
     background-image: url('./assets/hero-bg.jpg');
@@ -441,6 +464,9 @@
   }
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
+  }
+  .py-4 {
+    padding-block: calc(var(--spacing) * 4);
   }
   .py-5 {
     padding-block: calc(var(--spacing) * 5);
@@ -579,6 +605,13 @@
     &:hover {
       @media (hover: hover) {
         background-color: var(--color-white);
+      }
+    }
+  }
+  .hover\:text-\[\#a24e4e\] {
+    &:hover {
+      @media (hover: hover) {
+        color: #a24e4e;
       }
     }
   }
