--- a/src/output.css
+++ b/src/output.css
@@ -11,10 +11,7 @@
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-xs: 20rem;
-    --container-xl: 36rem;
-    --container-3xl: 48rem;
     --container-5xl: 64rem;
-    --container-7xl: 80rem;
     --text-xs: 0.75rem;
     --text-xs--line-height: calc(1 / 0.75);
     --text-sm: 0.875rem;
@@ -42,9 +39,7 @@
     --font-weight-medium: 500;
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
-    --tracking-tighter: -0.05em;
     --tracking-tight: -0.025em;
-    --tracking-normal: 0em;
     --tracking-widest: 0.1em;
     --leading-tight: 1.25;
     --leading-relaxed: 1.625;
@@ -53,7 +48,6 @@
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
-    --font-cormorant: "Cormorant Garamond", serif;
     --font-bodoni: "Libre Bodoni", serif;
     --font-eb-garamond: "EB Garamond", serif;
     --font-montserrat: "Montserrat", sans-serif;
@@ -256,14 +250,8 @@
   .aspect-\[2\/3\] {
     aspect-ratio: 2/3;
   }
-  .aspect-\[21\/9\] {
-    aspect-ratio: 21/9;
-  }
   .aspect-square {
     aspect-ratio: 1 / 1;
-  }
-  .aspect-video {
-    aspect-ratio: var(--aspect-video);
   }
   .h-5 {
     height: calc(var(--spacing) * 5);
@@ -289,23 +277,11 @@
   .w-16 {
     width: calc(var(--spacing) * 16);
   }
-  .w-\[80\%\] {
-    width: 80%;
-  }
-  .w-\[90\%\] {
-    width: 90%;
-  }
   .w-\[95\%\] {
     width: 95%;
   }
-  .w-\[calc\(80\%\)\] {
-    width: calc(80%);
-  }
   .w-full {
     width: 100%;
-  }
-  .max-w-5xl {
-    max-width: var(--container-5xl);
   }
   .max-w-xs {
     max-width: var(--container-xs);
@@ -360,6 +336,18 @@
   .border-white {
     border-color: var(--color-white);
   }
+  .bg-\[\#834530\/30\] {
+    background-color: #834530/30;
+  }
+  .bg-\[\#834530\] {
+    background-color: #834530;
+  }
+  .bg-\[\#8345304a\] {
+    background-color: #8345304a;
+  }
+  .bg-\[\#83453034\] {
+    background-color: #83453034;
+  }
   .bg-\[\#a24e4e\] {
     background-color: #a24e4e;
   }
@@ -372,16 +360,16 @@
   .bg-black {
     background-color: var(--color-black);
   }
-  .bg-black\/10 {
-    background-color: color-mix(in srgb, #000 10%, transparent);
-    @supports (color: color-mix(in lab, red, red)) {
-      background-color: color-mix(in oklab, var(--color-black) 10%, transparent);
-    }
-  }
   .bg-black\/20 {
     background-color: color-mix(in srgb, #000 20%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
       background-color: color-mix(in oklab, var(--color-black) 20%, transparent);
+    }
+  }
+  .bg-black\/30 {
+    background-color: color-mix(in srgb, #000 30%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      background-color: color-mix(in oklab, var(--color-black) 30%, transparent);
     }
   }
   .bg-black\/60 {
@@ -396,20 +384,11 @@
   .bg-white {
     background-color: var(--color-white);
   }
-  .bg-white\/30 {
-    background-color: color-mix(in srgb, #fff 30%, transparent);
-    @supports (color: color-mix(in lab, red, red)) {
-      background-color: color-mix(in oklab, var(--color-white) 30%, transparent);
-    }
-  }
   .bg-white\/50 {
     background-color: color-mix(in srgb, #fff 50%, transparent);
     @supports (color: color-mix(in lab, red, red)) {
       background-color: color-mix(in oklab, var(--color-white) 50%, transparent);
     }
-  }
-  .bg-\[url\(\'\'\)\] {
-    background-image: url('');
   }
   .bg-\[url\(\'\.\/assets\/collection-bg\.webp\'\)\] {
     background-image: url('./assets/collection-bg.webp');
@@ -417,8 +396,8 @@
   .bg-\[url\(\'\.\/assets\/footer\.webp\'\)\] {
     background-image: url('./assets/footer.webp');
   }
-  .bg-\[url\(\'\.\/assets\/hero-bg\.jpg\'\)\] {
-    background-image: url('./assets/hero-bg.jpg');
+  .bg-\[url\(\'\.\/assets\/hero-2\.webp\'\)\] {
+    background-image: url('./assets/hero-2.webp');
   }
   .bg-\[url\(\'\.\/assets\/protagonista-1\.webp\'\)\] {
     background-image: url('./assets/protagonista-1.webp');
@@ -441,8 +420,14 @@
   .bg-cover {
     background-size: cover;
   }
+  .bg-\[center_25\%\] {
+    background-position: center 25%;
+  }
   .bg-center {
     background-position: center;
+  }
+  .bg-top {
+    background-position: top;
   }
   .bg-no-repeat {
     background-repeat: no-repeat;
@@ -465,20 +450,11 @@
   .px-12 {
     padding-inline: calc(var(--spacing) * 12);
   }
-  .px-\[10\%\] {
-    padding-inline: 10%;
-  }
   .py-1 {
     padding-block: calc(var(--spacing) * 1);
   }
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
-  }
-  .py-4 {
-    padding-block: calc(var(--spacing) * 4);
-  }
-  .py-5 {
-    padding-block: calc(var(--spacing) * 5);
   }
   .py-12 {
     padding-block: calc(var(--spacing) * 12);
@@ -561,6 +537,10 @@
     --tw-font-weight: var(--font-weight-normal);
     font-weight: var(--font-weight-normal);
   }
+  .font-semibold {
+    --tw-font-weight: var(--font-weight-semibold);
+    font-weight: var(--font-weight-semibold);
+  }
   .tracking-tight {
     --tw-tracking: var(--tracking-tight);
     letter-spacing: var(--tracking-tight);
@@ -614,13 +594,6 @@
     &:hover {
       @media (hover: hover) {
         background-color: var(--color-white);
-      }
-    }
-  }
-  .hover\:text-\[\#a24e4e\] {
-    &:hover {
-      @media (hover: hover) {
-        color: #a24e4e;
       }
     }
   }
@@ -699,6 +672,12 @@
     @media (width >= 48rem) {
       font-size: var(--text-3xl);
       line-height: var(--tw-leading, var(--text-3xl--line-height));
+    }
+  }
+  .md\:text-4xl {
+    @media (width >= 48rem) {
+      font-size: var(--text-4xl);
+      line-height: var(--tw-leading, var(--text-4xl--line-height));
     }
   }
   .md\:text-6xl {
