cambios de input y output

--- a/src/input.css
+++ b/src/input.css
@@ -6,3 +6,13 @@
     --font-eb-garamond: "EB Garamond", serif;
     --font-montserrat: "Montserrat", sans-serif;
 }
+
+/* Utilities */
+.scrollbar-hide::-webkit-scrollbar {
+    display: none;
+}
+
+.scrollbar-hide {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
