--- a/src/output.css
+++ b/src/output.css
@@ -218,6 +218,9 @@
   .mx-auto {
     margin-inline: auto;
   }
+  .mt-4 {
+    margin-top: calc(var(--spacing) * 4);
+  }
   .mt-16 {
     margin-top: calc(var(--spacing) * 16);
   }
